[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hepic_server"
version = "0.2.0"  # <--- 在这里管理版本
description = "A robust async TCP server for Pi sensors"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = [
]

# --- 关键功能：定义命令行入口 ---
[project.scripts]
# 格式：命令名 = "包名.模块名:函数名"
hepic_server = "hepic_server.hepic_server:main"