[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hepic_server"
version = "0.2.1"  # <--- 在这里管理版本
description = "A robust async TCP server for HEPiC system. It runs on Raspberry Pi and communicates with Mettler load cell and meter counter."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Zhengyang Liu", email = "liuzy19911112@gmail.com"}
]
dependencies = [
]

# --- 关键功能：定义命令行入口 ---
[project.scripts]
# 格式：命令名 = "包名.模块名:函数名"
hepic_server = "hepic_server.hepic_server:main"